# MorTru-Engine-BackEnd

./: .gitignore  Cargo.toml  Dockerfile  README.md  deny.toml  rust-toolchain.toml  rustfmt.toml
.github/workflows/: cd-dev.yml  cd-prod.yml  ci.yml
crates/amort/: Cargo.toml
crates/amort/src/: lib.rs
crates/amort/tests/: amortization.rs
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/compliance/: Cargo.toml
crates/compliance/src/: lib.rs
crates/eligibility/: Cargo.toml
crates/eligibility/src/: lib.rs
crates/eligibility/tests/: eligibility.rs
crates/enrich/: Cargo.toml
crates/enrich/src/: lib.rs
crates/funnel/: Cargo.toml
crates/funnel/src/: contract.rs  funnel.rs  lib.rs  validation.rs
crates/funnel/tests/: contract_coverage.rs  epic_16_gate.rs  funnel.rs  t1_smoke.rs  validation.rs  validation_coverage.rs
crates/ingest/: Cargo.toml
crates/ingest/src/: lib.rs
crates/mismo/: Cargo.toml
crates/mismo/data/: fee_rules.json
crates/mismo/src/: error.rs  lib.rs
crates/mismo/src/enums/: aus.rs  comp.rs  fee.rs  loan_type.rs  mi.rs  mod.rs  party.rs  property.rs
crates/mismo/src/schema/: aus.rs  closing_cost.rs  collateral.rs  lender_comp.rs  loan_terms.rs  message.rs  mi.rs  mod.rs  party.rs
crates/mismo/src/xml/: mod.rs  parse.rs  serialize.rs
crates/mismo/tests/: aus_tests.rs  closing_cost_tests.rs  collateral_tests.rs  enum_mapping_tests.rs  epic2_gate.rs  fixture_tests.rs  lender_comp_tests.rs  loan_terms_tests.rs  message_tests.rs  mi_tests.rs  parse_tests.rs  party_tests.rs
crates/mismo/tests/fixtures/: conv_purchase.xml  conv_refi_rate_term.xml  fha_purchase.xml  usda_purchase.xml  va_purchase.xml
crates/ml/: Cargo.toml
crates/ml/src/: lib.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: lib.rs  worksheet.rs
crates/orchestrator/tests/: pricer.rs  pricer_p1.rs
crates/ref_data/: Cargo.toml
crates/ref_data/data/: ami_tract_data_2025.json  cbsa_crosswalk.json  conv_mi_coverage_2019.json  dpa_catalog_2025.json  enact_pmi_2025.json  essent_pmi_2019.json  fannie_llpa_2026.json  fha_condo_approved.json  fha_limits_2025.json  fha_mip_rates_2023.json  freddie_credit_fees_2026.json  gse_limits_2025.json  lender_profiles.json  llpa_matrix_fnma_2024.json  mcc_catalog_2025.json  mi_providers.json  mi_rates_nmi_monthly_2022.json  mi_rates_nmi_sp_bp_nr_2022.json  program_rules.json  radian_pmi_2021.json  rate_sheet_fixture_2025.json  seller_concession_caps_2025.json  state_hoi_rates_2025.json  usda_guarantee_fees_2025.json  usda_income_limits_2025.json  usda_mfh_by_tract.json  usda_rural_eligibility.json  uwm_overlay_2026.json  va_entitlement_2025.json  va_funding_fees_2023.json  zip_hoi_rates_tx_2025.json
crates/ref_data/migrations/: 0001_initial_types.sql  0002_fha_loan_limits.sql  0003_gse_loan_limits.sql  0004_usda_rural_eligibility.sql  0005_usda_income_limits.sql  0006_usda_mfh_by_tract.sql  0007_ami_tract_data.sql  0008_program_rules.sql  0009_state_hoi_rates.sql  0010_fha_mip_rates.sql  0011_va_funding_fees.sql  0012_lender_rate_data.sql
crates/ref_data/src/: cbsa.rs  condo_approval.rs  conv_mi.rs  conv_pmi.rs  dpa_catalog.rs  error.rs  fha_mip.rs  hoi_rates.rs  lender.rs  lib.rs  llpa.rs  mcc_catalog.rs  program_rules.rs  rate_sheet.rs  seller_concessions.rs  va_entitlement.rs  va_fee.rs  versioning.rs  zip_hoi.rs
crates/ref_data/src/geo/: mod.rs
crates/ref_data/src/store/: mod.rs  sqlite.rs
crates/ref_data/tests/: conv_pmi.rs  conv_pmi_store.rs  epic_4_gate.rs  task_4_15.rs  task_4_18.rs  task_4_1_scaffold.rs  task_4_24.rs  task_4_25.rs  task_4_26.rs  task_4_27.rs  task_4_29.rs  task_4_29_store.rs  tasks_4_11_4_12.rs  tasks_4_13_4_14.rs  tasks_4_16_4_17.rs  tasks_4_19_4_20_4_23.rs  tasks_4_2_4_5_4_6_4_21_4_22.rs  tasks_4_3_4_4.rs  tasks_4_7_4_8_4_9_4_10.rs
crates/reso/: Cargo.toml
crates/reso/src/: bridge.rs  enriched.rs  error.rs  fcc.rs  lib.rs
crates/reso/src/lookups/: mod.rs  property_type.rs  standard_status.rs
crates/reso/src/property/: address.rs  listing.rs  mod.rs  parse.rs  physical.rs  rooms.rs
crates/reso/tests/: epic3_gate.rs  task_3_1_scaffold.rs  task_3_2_parse.rs  task_3_3_address.rs  task_3_4_3_5_physical_rooms.rs  task_3_6_3_7_listing_fcc.rs  task_3_8_3_9_enriched_bridge.rs
crates/reso/tests/fixtures/: income_property.json  kyle_tx_condo.json  kyle_tx_sfr.json  manufactured_home.json  mobile_home.json
crates/scenarios/: Cargo.toml
crates/scenarios/src/: lib.rs  pruning.rs
crates/scenarios/tests/: enumeration.rs  pruning.rs
crates/solver/: Cargo.toml
crates/solver/src/: config.rs  converge.rs  frontier.rs  lib.rs  multi.rs
crates/solver/tests/: convergence.rs  epic_13_gate.rs  frontier.rs  multi.rs  scoring.rs
crates/types/: Cargo.toml
crates/types/benches/: money_arithmetic.rs
crates/types/src/: analysis_id.rs  basis_points.rs  cbsa_code.rs  cents.rs  credit_score.rs  dti.rs  enums.rs  error.rs  errors.rs  fips_code.rs  goal_mask.rs  lender_id.rs  lib.rs  loan_casefile_id.rs  ltv.rs  mls_listing_key.rs  price_ticks.rs  provenance.rs  scenario_id.rs  scenario_key.rs  state_code.rs  term_band.rs  term_months.rs
crates/types/src/enums/: amortization_type.rs  loan_product.rs  loan_purpose.rs  misc.rs  occupancy.rs  program_code.rs  property_type.rs
crates/types/src/errors/: compliance.rs  eligibility.rs  ingestion.rs  solver.rs
crates/types/tests/: ci_hardening.rs  decimal_conversions.rs  enumerations.rs  epic_1_gate.rs  error_hierarchy.rs  identifier_properties.rs  properties.rs  provenance.rs  term_band_and_months.rs  workspace_clean.rs  workspace_structure.rs
docs/: COVERAGE.md  EPIC-17-P4-fee-worksheet-design.md  audit-epics-1-4-analysis-readiness.html  cicd-google-cloud-setup.md  epic-1-2-documentation.html  epic-1-types-crate-reference.md  epic-3-build-plan.md  epic-3-reso-documentation.html  epic-4-ref-data-documentation.html  goal-mask-developer-guide.md  mortru-full-revised-build-plan.md
