[package]
name             = "amort"
description      = "TRID-compliant amortization schedules and multi-goal Pareto ranking."
version.workspace      = true
edition.workspace      = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true
publish.workspace      = true

[lints]
workspace = true

[dependencies]
types        = { workspace = true }
rust_decimal = { workspace = true }
