[package]
name             = "api"
description      = "HTTP API (Axum): analyze, batch, rate-sheet upload, lender admin."
version.workspace      = true
edition.workspace      = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true
publish.workspace      = true

[lints]
workspace = true

[dependencies]
# Stub: dependencies are introduced as Epic 15 tasks land.

[dev-dependencies]
