[package]
name             = "compliance"
description      = "QM categorization and ATR 8-factor compliance testing engine."
version.workspace      = true
edition.workspace      = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true
publish.workspace      = true

[lints]
workspace = true

[dependencies]
# Stub: dependencies are introduced as Epic 10 tasks land.

[dev-dependencies]
