[package]
name             = "eligibility"
description      = "Loan-product and mortgage-insurance eligibility engine."
version.workspace      = true
edition.workspace      = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true
publish.workspace      = true

[lints]
workspace = true

[dependencies]
# Stub: dependencies are introduced as Epic 8-9 tasks land.

[dev-dependencies]
