[package]
name             = "eligibility"
description      = "Loan-product and mortgage-insurance eligibility engine."
version.workspace      = true
edition.workspace      = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true
publish.workspace      = true

[lints]
workspace = true

[dependencies]
types    = { workspace = true }
ref_data = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
