[package]
name             = "mismo"
description      = "MISMO 3.4 reference-model schema for the Meridian Mortgage Engine."
version.workspace      = true
edition.workspace      = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true
publish.workspace      = true

[lints]
workspace = true

[dependencies]
types        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
quick-xml    = { workspace = true }
rust_decimal = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
