[package]
name             = "orchestrator"
description      = "Composition layer: real ScenarioPricer + analysis counts."
version.workspace      = true
edition.workspace      = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true
publish.workspace      = true

[lints]
workspace = true

[dependencies]
types     = { workspace = true }
scenarios = { workspace = true }
amort     = { workspace = true }
solver    = { workspace = true }
ref_data  = { workspace = true }

[dev-dependencies]
ref_data  = { workspace = true }
