[package]
name             = "reso"
description      = "RESO Data Dictionary 2.0 Property resource — all 235 fields, lookup catalog, FCC FIPS client, and RESO ↔ MISMO bridge."
version.workspace      = true
edition.workspace      = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true
publish.workspace      = true

[lints]
workspace = true

[dependencies]
types        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
rust_decimal = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
