[package]
name             = "scenarios"
description      = "Scenario enumeration, full month-granular term expansion, and pruning pipeline."
version.workspace      = true
edition.workspace      = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true
publish.workspace      = true

[lints]
workspace = true

[dependencies]
# Stub: dependencies are introduced as Epic 11-12 tasks land.

[dev-dependencies]
