[package]
name             = "scenarios"
description      = "Scenario enumeration, term expansion, and pruning pipeline."
version.workspace      = true
edition.workspace      = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true
publish.workspace      = true

[lints]
workspace = true

[dependencies]
types = { workspace = true }
