[package]
name             = "solver"
description      = "Circular pricing solver and TRID-compliant fee worksheet."
version.workspace      = true
edition.workspace      = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true
publish.workspace      = true

[lints]
workspace = true

[dependencies]
# Stub: dependencies are introduced as Epic 13 tasks land.

[dev-dependencies]
