[package]
name             = "solver"
description      = "Goal scoring, iterative pricing solver, and Pareto ranking."
version.workspace      = true
edition.workspace      = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true
publish.workspace      = true

[lints]
workspace = true

[dependencies]
types = { workspace = true }
